@@ -66,6 +66,7 @@ import java.util.UUID;
 import static io.crate.testing.TestingHelpers.createReference;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
+import static io.crate.testing.TestingHelpers.printedTable;
 import static org.mockito.Matchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -424,5 +425,26 @@ public class LuceneDocCollectorTest extends SQLTransportIntegrationTest {
         docCollector = createDocCollector(null, null, orderBy.orderBySymbols(), whereClause, PAGE_SIZE);
         docCollector.doCollect();
         assertThat(collectingProjector.rows.size(), is(NUMBER_OF_DOCS));
+    }
+
+    @Test
+    public void testRawExpressionSupportsCompressedSource() throws Exception {
+        prepareCreate("test_compressed_source")
+                .addMapping("default",
+                        "id", "type=integer",
+                        "name", "type=string",
+                        "_source", "compress=true")
+                .execute().actionGet();
+        ensureYellow();
+        execute("insert into test_compressed_source (id, name) values (?, ?)", new Object[][]{
+                {1, "fred"},
+                {2, "barney"}
+        });
+        refresh();
+
+        execute("select _raw from test_compressed_source order by id");
+        assertThat(printedTable(response.rows()), is("" +
+                "{\"id\":1,\"name\":\"fred\"}\n" +
+                "{\"id\":2,\"name\":\"barney\"}\n"));
     }
 }
